<resources>
    <string name="app_name">Android-TP</string>

    <string name="exercice1">Exercice 1</string>
    <string name="exercice2">Exercice 2</string>
    <string name="exercice3">Exercice 3</string>
    <string name="exercice4">Exercice 4</string>
    <string name="exercice5">Exercice 5</string>

    <string name="exercice1_text">Ecrire votre prénom et valider</string>
    <string name="exercice1_valider">Valider</string>
    <string name="exercice1_print">Hello World !</string>
    <string name="questionQCM">Quelle a été la différence de buts lors du match de football opposant l\'équipe enseignante du département à l\'équipe étudiante ?</string>

    <string name="exercice2_bonne_reponse">+ 10 pour les enseignants</string>
    <string name="exercice2_match_nul">0 Match Nul</string>
    <string name="exercice2_etudiants">+ 1 pour les étudiants</string>
    <string name="exercice2_valider">VALIDER MA REPONSE</string>
    <string name="exercice2_reponse">Choisir une réponse puis valider</string>

    <string name="exercice3_main_ordinateur">Main de l\'ordinateur</string>
    <string name="exercice3_main_joueur">Choisir une main :</string>
    <string name="exercice3_jouer">À vous de jouer !</string>
    <string name="exercice3_victoire">Victoire !</string>
    <string name="exercice3_defaite">Défaite !</string>
    <string name="exercice3_egalite">Egalité !</string>
    <string name="exercice3_nombre_victoires">"Nombre de victoires : "</string>
    <string name="exercice3_nombre_defaites">"Nombre de défaites : "</string>
    <string name="exercice3_nombre_egalites">"Nombre d'égalités : "</string>
    <string name="exercice3_nombre_victoires_chiffre">0</string>
    <string name="exercice3_nombre_defaites_chiffre">0</string>
    <string name="exercice3_nombre_egalites_chiffre">0</string>

    <string name="exercice4_instructions">Ecris ton prénom :</string>
    <string name="exercice4_nouvelles_instructions">Nouveau prénom :</string>
    <string name="exercice4_valider">Valider</string>
    <string name="exercice4_changer_prenom">CHANGER DE PRENOM</string>
    <string name="exercice4_changer_exercice">CHOISIR UN AUTRE EXERCICE</string>
    <string name="exercice4_hello_texte">Hello %1$s !!!</string>

    <string name="exercice5_choix_table">Choisis ta table de multiplication :</string>
    <string name="exercice5_multiplication">"%1$d x %2$d = "</string>
    <string name="exercice5_erreurs">ERREUR(S) !</string>
    <string name="exercice5_corriger_reponses">Corriger mes réponses</string>
    <string name="exercice5_choisir_autre_table">Choisir une autre table</string>
    <string name="exercice5_nombre_erreurs">Nombre d\'erreurs : %1$d</string>
    <string name="exercice5_felicitations">FELICITATIONS !</string>
    <string name="exercice5_choisir_autre_exercice">Choisir un autre exercice</string>
    <string name="button_add_user">Ajouter</string>
    <string name="hint_prenom_user">Prénom</string>
    <string name="hint_nom_user">Nom</string>
    <string name="button_add">Ajouter un utilisateur</string>
</resources>