<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercice5Activity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice5_erreurs"
        android:textSize="@dimen/texte_grand"/>

    <TextView
        android:id="@+id/exercice5_nombre_erreurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice5_nombre_erreurs"
        android:textSize="@dimen/texte_moyen"/>

    <Button
        android:id="@+id/exercice5_corriger_reponses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice5_corriger_reponses"/>

    <Button
        android:id="@+id/exercice5_choisir_autre_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice5_choisir_autre_table"/>

</LinearLayout>