<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercice5Activity"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/edit_prenom_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hint_prenom_user"/>

    <EditText
        android:id="@+id/edit_nom_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hint_nom_user"/>

    <Button
        android:id="@+id/button_add_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_user"/>

</LinearLayout>