<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelloActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/exercice4_hello_texte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/texte_grand"
        android:text="@string/exercice4_hello_texte"/>

    <Button
        android:id="@+id/exercice4_changer_prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice4_changer_prenom" />

    <Button
        android:id="@+id/exercice4_changer_exercice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice4_changer_exercice" />

</LinearLayout>